init classes for multilayer perceptron using numpy only

--- a/ch11_transformer/explore_imdb.ipynb
+++ b/ch11_transformer/explore_imdb.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,26 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10,)\n",
+      "(1, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(0, 10)\n",
+    "print(x.shape)\n",
+    "print(np.expand_dims(x, axis=0).shape)"
    ]
   },
   {
