layer forward pass has expected i/o

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -6,57 +6,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from mlp import DenseLayer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sigmoid(t):\n",
-    "    return 1 / (1 + np.exp(-t))"
+    "# Input data\n",
+    "rows = 5\n",
+    "cols = 1\n",
+    "input_vector = np.random.normal(size=(rows,))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate Layer\n",
+    "lyr = DenseLayer(input_dims=rows, num_units=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2,)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lyr(input_vector).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.85353788 -1.2203843   0.24238723]\n",
-      " [ 0.60451557  0.02135884 -1.14206377]]\n"
+      "(5,)*(5, 2) + (2,) = (1, 2)\n"
      ]
     }
    ],
    "source": [
-    "x = np.random.normal(size=(2, 3))\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.29869123, 0.22786883, 0.56030186],\n",
-       "       [0.64668872, 0.50533951, 0.24194165]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.apply_along_axis(sigmoid, axis=1, arr=x)"
+    "# Expected output\n",
+    "print(f'{input_vector.shape}*{lyr.W.shape} + {lyr.b.shape} = (1, {lyr.b.shape[0]})')"
    ]
   },
   {
