forward pass works

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -7,7 +7,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from mlp import DenseLayer"
+    "from mlp import DenseLayer, MLP\n",
+    "\n",
+    "def mse(y_hat: np.ndarray, y: np.ndarray) -> np.float64:\n",
+    "    return np.mean(np.square(y_hat - y))"
    ]
   },
   {
@@ -19,12 +22,34 @@
     "# Input data\n",
     "rows = 5\n",
     "cols = 1\n",
-    "input_vector = np.random.normal(size=(rows,))"
+    "input_vector = np.random.normal(size=(rows,))\n",
+    "dummy_pred_vector = np.random.normal(size=(rows,))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test loss\n",
+    "type(mse(dummy_pred_vector, input_vector))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +68,7 @@
        "(2,)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,20 +79,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MLP(input_dims=input_vector.shape[0], hidden_units=2, targets=1, loss_function=mse, learning_rate=1e-3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5,)*(5, 2) + (2,) = (1, 2)\n"
+      "[-0.25605004]\n",
+      "(1,)\n"
      ]
     }
    ],
    "source": [
-    "# Expected output\n",
-    "print(f'{input_vector.shape}*{lyr.W.shape} + {lyr.b.shape} = (1, {lyr.b.shape[0]})')"
+    "# Result of forward pass\n",
+    "fwd = model.forward_pass(inputs=input_vector)\n",
+    "print(fwd)\n",
+    "print(fwd.shape)"
    ]
   },
   {
