_ added to 'private' methods

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,21 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.25605004]\n",
+      "[0.01610959]\n",
       "(1,)\n"
      ]
     }
    ],
    "source": [
     "# Result of forward pass\n",
-    "fwd = model.forward_pass(inputs=input_vector)\n",
+    "fwd = model._forward_pass(inputs=input_vector)\n",
     "print(fwd)\n",
     "print(fwd.shape)"
    ]
