--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 = 1\n",
+    "l2 = []\n",
+    "l3 = 5\n",
+    "seq = [l1, *l2, l3]\n",
+    "print(seq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -48,46 +69,61 @@
      "output_type": "stream",
      "text": [
       "input: (5, 10)\n",
-      "output: (5, 2)\n",
-      "[[ 0.92944305 -1.21846771]\n",
-      " [-0.08838657 -0.81351259]\n",
-      " [-0.04518326 -0.49300706]\n",
-      " [ 0.03038661  0.72907292]\n",
-      " [-1.29596891  0.17739624]]\n"
+      "output: (5, 2) (5, 2)\n",
+      "[[-0.42647349 -0.24779502]\n",
+      " [-0.28689659 -0.40105034]\n",
+      " [-0.32231351 -0.45992227]\n",
+      " [-0.18448811  0.24800787]\n",
+      " [ 0.17294692  0.21348298]] \n",
+      "\n",
+      " [[-0.42647349 -0.24779502]\n",
+      " [-0.28689659 -0.40105034]\n",
+      " [-0.32231351 -0.45992227]\n",
+      " [-0.18448811  0.24800787]\n",
+      " [ 0.17294692  0.21348298]]\n"
      ]
     }
    ],
    "source": [
     "# Layer call\n",
-    "lyr_output = lyr(input_vector)\n",
+    "lyr_activations, lyr_wt_inputs = lyr(input_vector)\n",
     "print('input:', input_vector.shape)\n",
-    "print('output:', lyr_output.shape)\n",
-    "print(lyr_output)"
+    "print('output:', lyr_activations.shape, lyr_wt_inputs.shape)\n",
+    "print(lyr_activations, '\\n\\n', lyr_wt_inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = MLP(input_dims=input_vector.shape[0], hidden_units=2, targets=1, loss_function=mse, learning_rate=1e-3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "_forward_pass() missing 1 required positional argument: 'loss'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_35100/3430892139.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Result of forward pass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mfwd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_forward_pass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minput_vector\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfwd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfwd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: _forward_pass() missing 1 required positional argument: 'loss'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = MLP(input_dims=input_vector.shape[-1], hidden_units=2, targets=1, loss_function=mse, learning_rate=1e-3, l_layers=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.13224191]\n",
+      " [ 0.01783743]\n",
+      " [-0.16562248]\n",
+      " [-0.15245786]\n",
+      " [-0.05169993]]\n",
+      "(5, 1)\n"
      ]
     }
    ],
