hidden layers must have activation functions. implement and make it default

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +13,40 @@
     "\n",
     "def mse(y_true: np.ndarray, y_pred: np.ndarray) -> np.float64:\n",
     "    return np.mean(np.square(y_true - y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sigmoid:\n",
+    "    def __call__(self, inputs):\n",
+    "        return 1 / (1 + np.exp(-inputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.5       , 0.73105858, 0.88079708, 0.95257413, 0.98201379,\n",
+       "       0.99330715, 0.99752738, 0.99908895, 0.99966465, 0.99987661])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = np.arange(0, 10)\n",
+    "sigmoid = Sigmoid()\n",
+    "np.apply_along_axis(sigmoid, axis=0, arr=x)"
    ]
   },
   {
