--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,56 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from mlp import DenseLayer, MLP\n",
+    "from typing import Tuple, Optional, Union\n",
     "\n",
-    "np.random.seed(0)\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "def mse(y_true: np.ndarray, y_pred: np.ndarray) -> np.float64:\n",
-    "    return np.mean(np.square(y_true - y_pred))"
+    "from mlp import DenseLayer, MLP, ReLU, MeanSquaredError\n",
+    "\n",
+    "\n",
+    "np.random.seed(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Sigmoid:\n",
-    "    def __call__(self, inputs):\n",
-    "        return 1 / (1 + np.exp(-inputs))"
+    "# def mse(y_true: np.ndarray, y_pred: np.ndarray) -> np.float64:\n",
+    "#     return np.mean(np.square(y_true - y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.5       , 0.73105858, 0.88079708, 0.95257413, 0.98201379,\n",
-       "       0.99330715, 0.99752738, 0.99908895, 0.99966465, 0.99987661])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = np.arange(0, 10)\n",
-    "sigmoid = Sigmoid()\n",
-    "np.apply_along_axis(sigmoid, axis=0, arr=x)"
+    "x = np.linspace(-2, 2)\n",
+    "btable = np.greater(x, 0)\n",
+    "relu = ReLU()\n",
+    "mse = MeanSquaredError()\n",
+    "mse()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -128,15 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "([], [])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
