moved operations to separate file

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -11,7 +11,8 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from mlp import DenseLayer, MLP, ReLU, MeanSquaredError\n",
+    "from mlp import DenseLayer, MLP\n",
+    "from ops import ReLU, MeanSquaredError\n",
     "\n",
     "\n",
     "np.random.seed(0)"
