computing hidden layer delta

--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,30 @@
     "\n",
     "\n",
     "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4]\n",
+      "hadamard [0 2 4 6 8]\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(0, 5)\n",
+    "y = np.full_like(x, fill_value=2)\n",
+    "\n",
+    "print(x)\n",
+    "print('hadamard', x * y)\n",
+    "print(np.dot(x, y))"
    ]
   },
   {
