--- a/ch2_nn_math/testing.ipynb
+++ b/ch2_nn_math/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,26 @@
     "from ops import ReLU, MeanSquaredError\n",
     "\n",
     "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.normal(size=(32, 1))\n",
+    "b = np.random.normal(size=(32, 1))\n",
+    "\n",
+    "print(np.transpose(a).shape)"
    ]
   },
   {
