re-formatted backward pass to with inner loop computing errors for each sample individually

--- a/ch2_nn_math/backprop_atomic_ops.ipynb
+++ b/ch2_nn_math/backprop_atomic_ops.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "w2 (4, 3) DOT a1 (3,) = (4,)\n",
+      "w3 (2, 4) DOT a2 (4,) = \n",
       "a3: (2,)\n",
       "a2: (4,)\n",
       "z3: (2,)\n",
@@ -60,7 +62,7 @@
     "\n",
     "# Input vector\n",
     "num_features = 1\n",
-    "x = np.random.normal(size=(j1,))\n",
+    "x = np.random.normal(size=(j1, ))\n",
     "y = np.random.normal(size=(j3,))\n",
     "\n",
     "# Layer components\n",
@@ -73,10 +75,11 @@
     "b2 = np.zeros(shape=(j2, ))\n",
     "z2 = np.dot(w2, a1) + b2\n",
     "a2 = relu(z2)\n",
+    "print(f'w2 {w2.shape} DOT a1 {a1.shape} = {np.dot(w2, a1).shape}')\n",
     "\n",
     "w3 = np.random.uniform(size=(j3, k3))\n",
     "b3 = np.zeros(shape=(j3, ))\n",
-    "\n",
+    "print(f'w3 {w3.shape} DOT a2 {a2.shape} = ')\n",
     "z3 = np.dot(w3, a2) + b3\n",
     "a3 = linear(z3)\n",
     "\n",
