after decomposing operations to be by training example, backward pass works

--- a/ch2_nn_math/backprop_atomic_ops.ipynb
+++ b/ch2_nn_math/backprop_atomic_ops.ipynb
@@ -27,14 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "w2 (4, 3) DOT a1 (3,) = (4,)\n",
+      "w2 (4, 3) DOT a1 (3,) + b2 (4,) = (4,)\n",
       "w3 (2, 4) DOT a2 (4,) = \n",
       "a3: (2,)\n",
       "a2: (4,)\n",
@@ -75,7 +75,7 @@
     "b2 = np.zeros(shape=(j2, ))\n",
     "z2 = np.dot(w2, a1) + b2\n",
     "a2 = relu(z2)\n",
-    "print(f'w2 {w2.shape} DOT a1 {a1.shape} = {np.dot(w2, a1).shape}')\n",
+    "print(f'w2 {w2.shape} DOT a1 {a1.shape} + b2 {b2.shape} = {np.dot(w2, a1).shape}')\n",
     "\n",
     "w3 = np.random.uniform(size=(j3, k3))\n",
     "b3 = np.zeros(shape=(j3, ))\n",
