--- a/ch2_nn_math/tex/sources.bib
+++ b/ch2_nn_math/tex/sources.bib
@@ -29,3 +29,17 @@
   year      = {2016}
 }
 
+@online{3Blue1BrownWhatIsANN2017,
+  title        = {But What is a Neural Network | Chapter 1, Deep Learning},
+  date         = {2017},
+  organization = {YouTube},
+  author       = {3Blue1Brown: Grant Sanderson},
+  url          = {https://www.youtube.com/watch?v=aircAruvnKk}
+}
+
+@misc{MathSEVarsParamsArgs2015,
+  title        = {What is the difference between variable, argument and parameter?},
+  author       = {nmasanta (https://math.stackexchange.com/users/623924/nmasanta)},
+  howpublished = {Mathematics Stack Exchange},
+  url          = {https://math.stackexchange.com/q/3562026}
+}
