--- a/ch2_nn_math/tex/explanation.tex
+++ b/ch2_nn_math/tex/explanation.tex
@@ -50,7 +50,7 @@ the present document.
 \section{Introduction}
 
 \quad The neural network (function approximator) is just a chain of geometric transformations (functions)
-each parametrized by a weight matrix $W \in \mathcal{R}^{n_x \times n_h}$ and
+each parametrized by a weight matrix $W \in \mathcal{R}^{n_h \times n_x}$ and
 a bias vector $b \in \mathcal{R}^{n_h}$ on the input vector $x \in \mathcal{R}^{n_x}$.
 The geometric transformations of the neural network are encapsulated by connecting
 layers (e.g., dense/fully connected layers) together. A neural network has $L$ total
@@ -141,17 +141,27 @@ For the remainder of this document, the author will use the index 0 assumption
 since the author's implementation of the the neural network will use the Python
 programming language. If you wish to implement the same algorithms in a language
 such as R or Wolfram Mathematica, be wary of this index discrepancy.
+Consequently, with index beginning at 0, the last index of a vector with
+$n_x$ elements will be $(n_x - 1)$... and woe is the programmer who commits an
+off-by-one error.
 
-Lastly, a weight matrix $W$ has weight edges between the $k^{th}$
-input neuron of $n^{(l-1)}$ total input neurons (i.e., neurons in the previous layer
-$(l-1)$) and the $j^{th}$ hidden neuron of $n_h^{l}$ total hidden neurons (i.e.,
-neurons in the current layer $l$). A weight matrix looks similar to the vector, except rather than having a single
+Lastly, a matrix $W$ represents the weight of edges between the $k^{th}$
+input neuron of $n_x$ total input neurons (i.e., neurons in the previous layer)
+and the $j^{th}$ hidden neuron of $n_h^{l}$ total hidden neurons.
+A weight matrix looks similar to the vector, except rather than having a single
 column, a matrix has a rows and columns--looking like a table. Vectors can
 be referred to as rank-1 tensors, matrices as rank-2 tensors, so and so forth
-for multiple index "lists" in higher dimensions. A sample weight matrix is
+for multiple index "lists" in higher dimensions. A sample weight matrix
+$W \in \mathcal{R}^{n_h \times n_x}$ is
 shown below.
 
-
+\begin{align}
+	\begin{bmatrix}
+		W_{00}         & W_{01}         & W_{02}         & \cdots & W_{0(n_{x}-1)}         \\
+		\vdots         & \vdots         & \vdots         & \vdots & \vdots                 \\
+		W_{(n_{h}-1)0} & W_{(n_{h}-1)1} & W_{(n_{h}-1)2} & \cdots & W_{(n_{h}-1)(n_{x}-1)}
+	\end{bmatrix}
+\end{align}
 
 \section{The Multilayer Perceptron}
 \quad Here the author defines the operations that occur for a multilayer perceptron (MLP).
@@ -161,8 +171,19 @@ activation functions to input from a previous layer in the network.
 
 The affine transformation is simply $W_{jk}^{l} a_{k}^{l-1} + b_{j}^{l}$. Here,
 the activation $a_k^{l-1}$ denotes the activation of the $k^{th}$ neuron of the
-previous layer $l$. Note that the input neuron has no activation function $\phi$
-associated with it.
+previous layer $l$. Note that the input layer has no activation function $\phi$
+associated with it. Moreover, the inner dimensions of the matrix product
+$Wx$ match, that is the subscripts $k$ are "adjacent" to one another. While you may
+observe that the activation vector $a \in \mathcal{R}^{n_a}$ is clearly not a matrix,
+numerical libraries will often treat a vector $v \in \mathcal{R}^{n_v}$ as equivalent
+to a matrix with a single column (i.e., $V \in \mathcal{R}^{n_v \times 1}$) for
+the purposes of performing fast matrix-matrix calculations.
+
+Until now the discussion of the MLP has been entirely in abstract mathematical
+notation, so now a visual of a single layer (meaning single hidden layer)
+MLP is shown.
+
+
 
 % Neural Network Definition
 \subsection{Single Hidden Layer Neural Network}
